add h2 in new-branch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FFFFFFFFFFF</title>
 </head>
 <body>
-<h1>FFF</h1>    
-<h2>ffffffffffffffffffffffffffffffffffffffffffffffffffffff</h2>
+<h1>FFF1</h1>    
+<h2>gfgfgdfg</h2>
 </body>
 </html>
